2007-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Fix IsCurrent (use UTC).

2006-12-14  Sebastien Pouliot  <sebastien@ximian.com>

	* X501Name.cs: Added support for (some cases of) T.61 strings, like
	the latin-1 encoded accentued characters founds in some DN. Fix bug 
	#77295.

2006-12-11  Sebastien Pouliot  <sebastien@ximian.com>

	* PKCS12.cs: Fix DSA certificates (with parameters) and don't throw
	an exception in the case where parameters aren't part of the 
	certificate. This fix makes all 405 PKCS#12 test cases from PKITS 
	works using Mono :).

2006-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* X501Name.cs: Add decoding of RFC3280 mandatory and optional 
	attributes types for dnQualifier, title, surname, givenName and 
	initial.
	* X520Attributes.cs: Add encoding of RFC3280 mandatory and 
	optional attributes types for dnQualifier, title, surname, givenName 
	and initial.

2006-12-05  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Resurrect the (fixed) support for [Issuer|
	Subject]UniqueIdentifier, including new properties.
	* X509CRL.cs: Fix DSA signature verification when numbers aren't 
	exactly 20 bytes long (e.g. too short or negative with an extra 0x00).

2006-12-05  Sebastien Pouliot  <sebastien@ximian.com>

	* X509CRL.cs: Expose the Hash and RawData properties to make it easier
	to support CRL into stores.
	* X509Store.cs: Add support to Import and Remove CRL from stores. 
	Refactor the code to get unique identificators.
	* X509Stores.cs: Change default, for Open, to stores that supports 
	CRLs.

2006-12-04  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Added support for inherited DSA key parameters.

2006-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Store.cs: Add new Open method to access any certificate store
	by any names (required to support 2.0 features).

2006-11-13  Sebastien Pouliot  <sebastien@ximian.com>
